# worktrunk

./: -l  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IDEAS.md  ISSUE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SETUP.md  TODO.md  Taskfile.yaml  Taskfile.yml  build.rs  config.example.toml  deny.toml  dist-workspace.toml  flake.nix  gat.md  rust_out  setup-environment.sh  test-sync-e2e.sh  test-wt-bridge.sh  test.txt  verify_captures
.cargo/: config.toml
.claude-plugin/: CLAUDE.md  README.md  marketplace.json  plugin.json
.codex-plugin/: README.md  plugin.json
.config/: continuous.toml  insta.yaml  lychee.toml  nextest.toml  tend.toml  tend.yaml  wt.example.toml  wt.toml
.gemini-extension/: README.md  gemini-extension.json
.github/: CLAUDE.md  benchmark-failure.md  cd-security-model.md  continuous-security-model.md  dependabot.yaml  tend-security-model.md
.opencode-plugin/: README.md  worktrunk.ts
benches/: CLAUDE.md  alias.rs  cow_copy.rs  list.rs  picker_preview.rs  remove.rs  time_to_first_output.rs
demos/: lib.py
design/: picker-preview-toggle-width.md  picker-shortcuts.md  release-tag-strategy.md
dev/: build-social-cards  config.example.toml  config.source.md  coverage.sh  fetch-assets  generate-logo.sh  insta-fallback-bug-repro.md  opencode-plugin.ts  publish-assets  setup-claude-code-web.sh  update-homebrew.sh  (+3 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: config_migrate_content.rs  config_template_validation.rs  git_remote_url_parse.rs  sanitize_for_filename.rs
(+2329 files in other folders)
